[Fix] Legger til overflow-wrap på tekst over stillingstittel

--- a/src/stilling/Stilling.less
+++ b/src/stilling/Stilling.less
@@ -64,6 +64,8 @@
 .Stilling__employer-and-location {
   line-height: 1.33;
   margin: 0 0 0.5rem;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .detail-section {
